# stubber

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/stubber/: stubber.h
src/: stubber.cpp
